# uls

./: .gitignore  CMakeLists.txt  README.md
inc/: uls_imarchenko.h  yksuls.h
src/additional/: mx_alphabet_sort.c  mx_alphabet_sort2.c  mx_conver_bytes.c  mx_file_dir_sort.c  mx_float_to_char.c  mx_max_len_of_inode.c  mx_the_biggest_name.c
src/flags/: mx_check_flags.c  mx_flag_h.c  mx_flag_i.c  mx_flag_l.c  mx_flag_p.c
src/main/: main.c  mx_check_and_output.c
src/output/: mx_output_in_one_column.c  mx_output_with_comma.c  output_by_size_of_wind.c
src/print_out/: mx_print_l_flag.c
