cmake_minimum_required(VERSION 3.16)
project(yksonzenko_uls_master C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libmx/inc)

add_executable(yksonzenko_uls_master
        inc/uls.h
        libmx/inc/libmx.h
        libmx/src/mx_atoi.c
        libmx/src/mx_binary_search.c
        libmx/src/mx_bubble_sort.c
        libmx/src/mx_count_substr.c
        libmx/src/mx_count_words.c
        libmx/src/mx_create_node.c
        libmx/src/mx_del_extra_spaces.c
        libmx/src/mx_del_intarr.c
        libmx/src/mx_del_strarr.c
        libmx/src/mx_file_to_str.c
        libmx/src/mx_foreach.c
        libmx/src/mx_get_char_index.c
        libmx/src/mx_get_substr_index.c
        libmx/src/mx_hex_to_nbr.c
        libmx/src/mx_in_alphabet.c
        libmx/src/mx_intlen.c
        libmx/src/mx_isalpha.c
        libmx/src/mx_isdigit.c
        libmx/src/mx_isspace.c
        libmx/src/mx_itoa.c
        libmx/src/mx_list_size.c
        libmx/src/mx_memccpy.c
        libmx/src/mx_memchr.c
        libmx/src/mx_memcmp.c
        libmx/src/mx_memcpy.c
        libmx/src/mx_memmem.c
        libmx/src/mx_memmove.c
        libmx/src/mx_memrchr.c
        libmx/src/mx_memset.c
        libmx/src/mx_nbr_length.c
        libmx/src/mx_nbr_to_hex.c
        libmx/src/mx_pop_back.c
        libmx/src/mx_pop_front.c
        libmx/src/mx_pow.c
        libmx/src/mx_print_intarr.c
        libmx/src/mx_print_strarr.c
        libmx/src/mx_print_unicode.c
        libmx/src/mx_printchar.c
        libmx/src/mx_printerr.c
        libmx/src/mx_printint.c
        libmx/src/mx_printstr.c
        libmx/src/mx_push_back.c
        libmx/src/mx_push_front.c
        libmx/src/mx_quicksort.c
        libmx/src/mx_realloc.c
        libmx/src/mx_replace_substr.c
        libmx/src/mx_sort_list.c
        libmx/src/mx_sqrt.c
        libmx/src/mx_str_reverse.c
        libmx/src/mx_strcat.c
        libmx/src/mx_strchr.c
        libmx/src/mx_strcmp.c
        libmx/src/mx_strcpy.c
        libmx/src/mx_strdel.c
        libmx/src/mx_strdup.c
        libmx/src/mx_strjoin.c
        libmx/src/mx_strlen.c
        libmx/src/mx_strncmp.c
        libmx/src/mx_strncpy.c
        libmx/src/mx_strndup.c
        libmx/src/mx_strnew.c
        libmx/src/mx_strsplit.c
        libmx/src/mx_strstr.c
        libmx/src/mx_strtrim.c
        libmx/src/mx_swap_char.c
        src/additional/mx_alphabet_sort.c
        src/additional/mx_alphabet_sort2.c
        src/additional/mx_alphabet_sort3.c
        src/additional/mx_array_reverse.c
        src/additional/mx_conver_bytes.c
        src/additional/mx_file_dir_sort.c
        src/additional/mx_float_to_char.c
        src/additional/mx_get_dir_len.c
        src/additional/mx_index_align_right.c
        src/additional/mx_links_align_right.c
        src/additional/mx_max_len_of_inode.c
        src/additional/mx_max_len_of_size.c
        src/additional/mx_size_align_right.c
        src/additional/mx_struct_sort.c
        src/additional/mx_the_biggest_name.c
        src/errors/mx_check_and_rewrite_obj.c
        src/errors/mx_error_illegal_option.c
        src/errors/mx_no_file_dir.c
        src/flags/mx_check_and_connect_flags.c
        src/flags/mx_check_flags.c
        src/flags/mx_flag_h.c
        src/flags/mx_flag_i.c
        src/flags/mx_flag_l.c
        src/flags/mx_flag_p.c
        src/flags/mx_get_acl_xattr.c
        src/flags/mx_print_permissions_list.c
        src/flags/mx_specify_type_file.c
        src/flags/mx_store_all_obj_array.c
        src/flags/mx_time_modif.c
        src/main/main.c
        src/main/mx_clean_struct_result.c
        src/main/mx_cleaner.c
        src/print_out/mx_check_what_to_print.c
        src/print_out/mx_output_by_size_of_wind.c
        src/print_out/mx_output_in_one_column.c
        src/print_out/mx_print_l_flag.c
        src/print_out/mx_print_lh_flag.c
        src/print_out/mx_print_lhi_flag.c
        src/print_out/mx_print_li_flag.c
        src/print_out/mx_print_one_obj.c
        src/print_out/mx_print_root_dirs_files.c
        src/print_out/mx_print_root_files.c
        src/print_out/mx_print_two_and_more_obj.c
        2.c)
